--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
 
     <div class="navbar__s3">
       <p>Courses</p>
-      <p>My Learning </p>
+      <!-- <p>My Learning </p> -->
+      <div class="mylearning">
+        <p> My learning</p>
+        <div class="mylearning__popup">
+         <p>you did not purchase anything yet</p> 
+        </div>
+
+      </div>
       <i class="fa-solid fa-cart-shopping" style="color:#000000;"></i>
       <i class="fa-solid fa-bell" style="color: #010813;"></i>
       <i class="fa-solid fa-user" style="color:#000000;"></i>
@@ -52,8 +59,12 @@
 </div>
 <!--Sale image-->
 
-<div class="sale-image">
   <img src="./image/sale image.jpg " alt="sale image">
+
+   <div class="sale image__offer">
+   <h2>Udemey flash Sale! 24 hours to save</h2>
+<p>Get the top courses for just 499.just a one day to save but a lifetime to learn</p>
+  </div>
 </div>
 <!--Recommended-->
 <div class="recommended">
